docs: admin 테이블 설계 수정

--- a/docs/계정/관리자.md
+++ b/docs/계정/관리자.md
@@ -15,11 +15,11 @@
 ```mysql
 CREATE TABLE admin (
         admin_id BIGINT AUTO_INCREMENT PRIMARY KEY,
-        email VARCHAR(255) NOT NULL,
+        email VARCHAR(255) UNIQUE NOT NULL,
         password VARCHAR(60) NOT NULL,
         name VARCHAR(30) NOT NULL,
         nickname VARCHAR(30) UNIQUE NOT NULL,
-        admin_role ENUM('SUPER_ADMIN', 'ADMIN') NOT NULL,
+        role ENUM('SUPER_ADMIN', 'ADMIN') NOT NULL,
         created_at DATE NOT NULL,
         updated_at DATE NOT NULL,
         deleted_at DATE
