--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -34,11 +34,11 @@ CREATE TABLE category (
 
 ## 기능 
 ### 어드민 기능
-- [ ] CREATE
-  - [ ] `name`은 중복될 수 없으며, `null`일 수 없다.
-  - [ ] `name`에 최대 15자 까지 입력 가능하다.
-  - [ ] 부모 카테고리가 있는 경우 `parent_id`에 부모 카테고리의 `id` 값이 저장된다.
-  - [ ] 부모 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
+- [x] CREATE
+  - [x] `name`은 중복될 수 없다.
+  - [x] `name`에 2자에서 15자로 입력 가능하다.
+  - [x] 부모 카테고리가 있는 경우 `parent_id`에 부모 카테고리의 `id` 값이 저장된다.
+  - [x] 부모 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
 - [ ] READ
   - [ ] 부모 카테고리와 자식 카테고리 별로 조회할 수 있다.
 - [ ] UPDATE
