--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -15,7 +15,7 @@
 
 ```mysql
 CREATE TABLE category (
-        category_id BIGINT PRIMARY KEY,
+        category_id BIGINT AUTO_INCREMENT PRIMARY KEY,
         name VARCHAR(40) UNIQUE NOT NULL,
         parent_id BIGINT,
         created_at DATE NOT NULL,
@@ -24,7 +24,7 @@ CREATE TABLE category (
         updated_by BIGINT NOT NULL,
         deleted_at DATE,
         deleted_by BIGINT,
-
+        
         FOREIGN KEY (parent_id) REFERENCES category(category_id),
         FOREIGN KEY (created_by) REFERENCES admin(admin_id),
         FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
