--- a/docs/계정/관리자.md
+++ b/docs/계정/관리자.md
@@ -20,9 +20,9 @@ CREATE TABLE admin (
         name VARCHAR(30) NOT NULL,
         nickname VARCHAR(30) UNIQUE NOT NULL,
         role ENUM('SUPER_ADMIN', 'ADMIN') NOT NULL,
-        created_at DATE NOT NULL,
-        updated_at DATE NOT NULL,
-        deleted_at DATE
+        created_at TIMESTAMP NOT NULL,
+        updated_at TIMESTAMP NOT NULL,
+        deleted_at TIMESTAMP
 );
 ```
 
