--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -18,11 +18,11 @@ CREATE TABLE category (
         category_id BIGINT AUTO_INCREMENT PRIMARY KEY,
         name VARCHAR(40) UNIQUE NOT NULL,
         parent_id BIGINT,
-        created_at DATE NOT NULL,
+        created_at TIMESTAMP NOT NULL,
         created_by BIGINT NOT NULL,
-        updated_at DATE NOT NULL,
+        updated_at TIMESTAMP NOT NULL,
         updated_by BIGINT NOT NULL,
-        deleted_at DATE,
+        deleted_at TIMESTAMP,
         deleted_by BIGINT,
         
         FOREIGN KEY (parent_id) REFERENCES category(category_id),
