docs: 부모, 자식 카테고리 명칭 변경 (상위, 하위)

--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -5,7 +5,7 @@
 |-------------|-------------|-------------|-----------------------------------------|
 | category_id | 식별자         | BIGINT      | PK                                      |
 | name        | 카테고리 명      | VARCHAR(40) | - UNIQUE <br/>- NOT NULL                |
-| parent_id   | 부모 카테고리 식별자 | BIGINT      | FK (Category - category_id)             |
+| parent_id   | 상위 카테고리 식별자 | BIGINT      | FK (Category - category_id)             |
 | created_at  | 생성일시        | DATE        | NOT NULL                                |
 | created_by  | 생성자         | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
 | updated_at  | 수정일시        | DATE        | NOT NULL                                |
@@ -37,26 +37,26 @@ CREATE TABLE category (
 - [x] CREATE
   - [x] `name`은 중복될 수 없다.
   - [x] `name`에 2자에서 15자로 입력 가능하다.
-  - [x] 부모 카테고리가 있는 경우 `parent_id`에 부모 카테고리의 `id` 값이 저장된다.
-  - [x] 부모 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
+  - [] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
+  - [x] 상위 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
 - [ ] READ
-  - [ ] 부모 카테고리와 자식 카테고리 별로 조회할 수 있다.
+  - [x] 상위 카테고리 아래에 하위 카테고리에 출력된다.
 - [ ] UPDATE
   - [ ] `name`은 중복될 수 없으며, `null`일 수 없다.
   - [ ] `name`에 최대 15자 까지 입력 가능하다.
-  - [ ] 부모 카테고리가 있는 경우 `parent_id`에 부모 카테고리의 `id` 값이 저장된다.
-  - [ ] 부모 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
+  - [ ] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
+  - [ ] 상위 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
   - [ ] `name`과 `parent_id`는 수정할 수 있다.
   - [ ] 상품을 여러개 선택한 후 한 번에 카테고리를 수정을 할 수 있다. (상품 기능에서 자세하게 설명)
   - [ ] 수정 시 `updated_at`, `updated_by` 컬럼이 업데이트 된다.
 - [ ] DELETE
-  - [ ] 자식 카테고리가 있는 경우 삭제할 수 없다.
+  - [ ] 하위 카테고리가 있는 경우 삭제할 수 없다.
   - [ ] 해당 카테고리에 등록된 상품이 존재하는 경우 삭제할 수 없다.
-  - [ ] 자식 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
+  - [ ] 하위 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
   - [ ] 삭제 시 DELETE_AT에 삭제한 날짜가 저장되며, 실제로 삭제되진 않는다.
 
 ### 회원 기능
 - [ ] READ
-  - [ ] 카테고리 탭 클릭 시 부모 카테고리만 출력되며, 부모 카테고리 선택 시 해당 카테고리의 자식 카테고리가 출력된다.
-  - [ ] 부모 카테고리('A') 선택 시 부모 카테고리가 해당 값('A')인 모든 상품의 정보가 출력된다.
-  - [ ] 자식 카테고리('B') 선택 시 자식 카테고리('B')에 포함된 모든 상품의 정보가 출력된다.
+  - [ ] 카테고리 탭 클릭 시 상위 카테고리만 출력되며, 상위 카테고리 선택 시 해당 카테고리의 하위 카테고리가 출력된다.
+  - [ ] 상위 카테고리('A') 선택 시 상위 카테고리가 해당 값('A')인 모든 상품의 정보가 출력된다.
+  - [ ] 하위 카테고리('B') 선택 시 하위 카테고리('B')에 포함된 모든 상품의 정보가 출력된다.
