feat: 프론트에서 카테고리 추가 시 상위 카테고리 선택 기능

--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -37,7 +37,7 @@ CREATE TABLE category (
 - [x] CREATE
   - [x] `name`은 중복될 수 없다.
   - [x] `name`에 2자에서 15자로 입력 가능하다.
-  - [] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
+  - [x] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
   - [x] 상위 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
 - [ ] READ
   - [x] 상위 카테고리 아래에 하위 카테고리에 출력된다.
@@ -50,7 +50,7 @@ CREATE TABLE category (
   - [ ] 상품을 여러개 선택한 후 한 번에 카테고리를 수정을 할 수 있다. (상품 기능에서 자세하게 설명)
   - [ ] 수정 시 `updated_at`, `updated_by` 컬럼이 업데이트 된다.
 - [ ] DELETE
-  - [ ] 하위 카테고리가 있는 경우 삭제할 수 없다.
+  - [X] 하위 카테고리가 있는 경우 삭제할 수 없다.
   - [ ] 해당 카테고리에 등록된 상품이 존재하는 경우 삭제할 수 없다.
   - [ ] 하위 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
   - [ ] 삭제 시 DELETE_AT에 삭제한 날짜가 저장되며, 실제로 삭제되진 않는다.
