--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -34,23 +34,22 @@ CREATE TABLE category (
 
 ## 기능 
 ### 어드민 기능
-- [x] CREATE
-  - [x] `name`은 중복될 수 없다.
-  - [x] `name`에 2자에서 15자로 입력 가능하다.
-  - [x] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
-  - [x] 상위 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
+- [ ] CREATE
+  - [ ] `name`은 중복될 수 없다.
+  - [ ] `name`에 2자에서 15자로 입력 가능하다.
+  - [ ] 카테고리 생성 시 상위 카테고리와 해당 카테고리의 하위 카테고리를 함께 만들기.
 - [ ] READ
-  - [x] 상위 카테고리 아래에 하위 카테고리에 출력된다.
+  - [ ] 상위 카테고리 아래에 하위 카테고리에 출력된다.
 - [ ] UPDATE
   - [ ] `name`은 중복될 수 없으며, `null`일 수 없다.
   - [ ] `name`에 최대 15자 까지 입력 가능하다.
-  - [ ] 상위 카테고리가 있는 경우 `parent_id`에 상위 카테고리의 `id` 값이 저장된다.
-  - [ ] 상위 카테고리가 없는 경우 `parent_id`에 `null`이 저장된다.
-  - [ ] `name`과 `parent_id`는 수정할 수 있다.
-  - [ ] 상품을 여러개 선택한 후 한 번에 카테고리를 수정을 할 수 있다. (상품 기능에서 자세하게 설명)
+  - [ ] 상위 카테고리 수정 진입 시 하위 카테고리 리스트가 노출되고, 상위 하위 모두 이름 변경이 가능하다.
+  - [ ] 상위 카테고리 수정 진입 시 하위 카테고기를 삭제할 수 있다.
+  - [ ] 하위 카테고리 선택 후 해당 카테고리 안에 존재하는 상품들을 한 번에 다른 카테고리로 옮길 수 있다.
   - [ ] 수정 시 `updated_at`, `updated_by` 컬럼이 업데이트 된다.
+  - [ ] 하위 카테고리 선택 후 [상위 카테고리 변경] 버튼을 클릭하여 상위 카테고리를 수정할 수 있다.
 - [ ] DELETE
-  - [X] 하위 카테고리가 있는 경우 삭제할 수 없다.
+  - [ ] 하위 카테고리가 있는 경우 삭제할 수 없다.
   - [ ] 해당 카테고리에 등록된 상품이 존재하는 경우 삭제할 수 없다.
   - [ ] 하위 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
   - [ ] 삭제 시 DELETE_AT에 삭제한 날짜가 저장되며, 실제로 삭제되진 않는다.
