docs: 설계서에 진행 사항 추가

--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -39,21 +39,21 @@ CREATE TABLE category (
   - [x] `name`에 2자에서 15자로 입력 가능하다.
   - [x] 하위 카테고리를 입력하지 않는 경우, 상위 카테고리만 등록된다.
   - [x] 하위 카테고리와 함께 입력할 경우, 상위 카테고리와 하위 카테고리 모두 등록된다.
-- [ ] READ
-  - [ ] 상위 카테고리 아래에 하위 카테고리에 출력된다.
+- [x] READ
+  - [x] 상위 카테고리 아래에 하위 카테고리에 출력된다.
 - [ ] UPDATE
-  - [ ] `name`은 중복될 수 없으며, `null`일 수 없다.
-  - [ ] `name`에 최대 15자 까지 입력 가능하다.
-  - [ ] 상위 카테고리 수정 진입 시 하위 카테고리 리스트가 노출되고, 상위 하위 모두 이름 변경이 가능하다.
-  - [ ] 상위 카테고리 수정 진입 시 하위 카테고리를 삭제할 수 있다.
-  - [ ] 하위 카테고리 선택 후 해당 카테고리 안에 존재하는 상품들을 한 번에 다른 카테고리로 옮길 수 있다.
-  - [ ] 수정 시 `updated_at`, `updated_by` 컬럼이 업데이트 된다.
+  - [x] `name`은 중복될 수 없으며, `null`일 수 없다.
+  - [x] `name`에 최대 15자 까지 입력 가능하다.
+  - [x] 상위 카테고리 수정 진입 시 하위 카테고리 리스트가 노출되고, 상위 하위 모두 이름 변경이 가능하다.
+  - [x] 상위 카테고리 수정 진입 시 하위 카테고리를 삭제할 수 있다.
+  - [x] 하위 카테고리 선택 후 해당 카테고리 안에 존재하는 상품들을 한 번에 다른 카테고리로 옮길 수 있다.
+  - [x] 수정 시 `updated_at`, `updated_by` 컬럼이 업데이트 된다.
   - [ ] 하위 카테고리 선택 후 [상위 카테고리 변경] 버튼을 클릭하여 상위 카테고리를 수정할 수 있다.
 - [ ] DELETE
-  - [ ] 하위 카테고리가 있는 경우 삭제할 수 없다.
+  - [x] 하위 카테고리가 있는 경우 삭제할 수 없다.
   - [ ] 해당 카테고리에 등록된 상품이 존재하는 경우 삭제할 수 없다.
-  - [ ] 하위 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
-  - [ ] 삭제 시 DELETE_AT에 삭제한 날짜가 저장되며, 실제로 삭제되진 않는다.
+  - [x] 하위 카테고리가 없으며, 해당 카테고리에 등록된 상품이 없는 경우 삭제할 수 있다. 
+  - [x] 삭제 시 DELETE_AT에 삭제한 날짜가 저장되며, 실제로 삭제되진 않는다.
 
 ### 회원 기능
 - [ ] READ
