feat: 상품 리스트 기본 조회 기능

--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -33,16 +33,16 @@ CREATE TABLE goods (
        sale_status VARCHAR(50) NOT NULL,
        photo_upload_file_name VARCHAR(500),
        photo_store_file_name VARCHAR(500),
-       created_at DATE NOT NULL,
+       created_at TIMESTAMP NOT NULL,
        created_by BIGINT NOT NULL,
-       updated_at DATE NOT NULL,
+       updated_at TIMESTAMP NOT NULL,
        updated_by BIGINT NOT NULL,
-       deleted_at DATE,
-       delete_by BIGINT,
+       deleted_at TIMESTAMP,
+       deleted_by BIGINT,
        FOREIGN KEY (category_id) REFERENCES category(category_id),
        FOREIGN KEY (created_by) REFERENCES admin(admin_id),
        FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
-       FOREIGN KEY (delete_by) REFERENCES admin(admin_id)
+       FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
 );
 ```
 
@@ -88,7 +88,7 @@ CREATE TABLE goods_detail (
 | updated_at      | 수정일시   | DATE        | NOT NULL                                |
 | updated_by      | 수정자    | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
 | deleted_at      | 삭제일시   | DATE        |                                         |
-| delete_by       | 삭제자    | BIGINT      | - (Admin - admin_id)                    |
+| deleted_by      | 삭제자    | BIGINT      | - (Admin - admin_id)                    |
 ```mysql
 CREATE TABLE goods_option (
     goods_option_id BIGINT AUTO_INCREMENT PRIMARY KEY,
@@ -98,16 +98,16 @@ CREATE TABLE goods_option (
     sale_percent BIGINT,
     amount BIGINT NOT NULL,
     sale_status VARCHAR(50) NOT NULL,
-    created_at DATE NOT NULL,
+    created_at TIMESTAMP NOT NULL,
     created_by BIGINT NOT NULL,
-    updated_at DATE NOT NULL,
+    updated_at TIMESTAMP NOT NULL,
     updated_by BIGINT NOT NULL,
-    deleted_at DATE,
+    deleted_at TIMESTAMP,
     delete_by BIGINT,
     FOREIGN KEY (goods_id) REFERENCES goods(goods_id),
     FOREIGN KEY (created_by) REFERENCES admin(admin_id),
     FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
-    FOREIGN KEY (delete_by) REFERENCES admin(admin_id)
+    FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
 );
 
 ```
