feat: 상품 추가 페이지 기본 정보 영역 구현
- 상위 카테고리 선택 시 하위 카테고리 조회 API 실행

--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -10,7 +10,7 @@
 | summary                | 짧은 설명                  | VARCHAR(500) |                                         |
 | price                  | 금액                     | BIGINT       | NOT NULL                                |
 | sale_price             | 할인 금액                  | BIGINT       |                                         |
-| sale_percent           | 할인 퍼센트                 | BIGINT       |                                         |
+| sale_percent           | 할인 퍼센트                 | INT          |                                         |
 | sale_status            | 판매 상태                  | VARCHAR(50)  | NOT NULL                                |
 | photo_upload_file_name | 대표 상품 이미지(업로드한 파일명)    | VARCHAR(500) | NOT NULL                                |
 | photo_store_file_name  | 대표 상품 이미지(서버에 저장된 파일명) | VARCHAR(500) | NOT NULL                                |
@@ -29,7 +29,7 @@ CREATE TABLE goods (
        summary VARCHAR(500),
        price BIGINT NOT NULL,
        sale_price BIGINT,
-       sale_percent BIGINT,
+       sale_percent INT,
        sale_status VARCHAR(50) NOT NULL,
        photo_upload_file_name VARCHAR(500),
        photo_store_file_name VARCHAR(500),
@@ -80,7 +80,7 @@ CREATE TABLE goods_detail (
 | goods_id        | 상품 식별자 | BIGINT      | FK (goods - goods_id)                   |
 | price           | 금액     | BIGINT      | NOT NULL                                |
 | sale_price      | 할인 금액  | BIGINT      |                                         |
-| sale_percent    | 할인 퍼센트 | BIGINT      |                                         |
+| sale_percent    | 할인 퍼센트 | INT         |                                         |
 | amount          | 재고     | BIGINT      | NOT NULL                                |
 | sale_status     | 판매 상태  | VARCHAR(50) | NOT NULL                                |
 | created_at      | 생성일시   | DATE        | NOT NULL                                |
@@ -96,7 +96,7 @@ CREATE TABLE goods_option (
     price BIGINT NOT NULL,
     sale_price BIGINT,
     sale_percent BIGINT,
-    amount BIGINT NOT NULL,
+    amount INT NOT NULL,
     sale_status VARCHAR(50) NOT NULL,
     created_at TIMESTAMP NOT NULL,
     created_by BIGINT NOT NULL,
