docs: 상품 데이터베이스 데이터 타입 수정

--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -9,8 +9,8 @@
 | name                   | 상품명                    | VARCHAR(100) |                                         |
 | summary                | 짧은 설명                  | VARCHAR(500) |                                         |
 | price                  | 금액                     | BIGINT       | NOT NULL                                |
-| sale_price             | 할인 금액                  | BIGINT       |                                         |
-| sale_percent           | 할인 퍼센트                 | INT          |                                         |
+| discount_price         | 할인 금액                  | BIGINT       |                                         |
+| discount_percent       | 할인 퍼센트                 | INT          |                                         |
 | sale_status            | 판매 상태                  | VARCHAR(50)  | NOT NULL                                |
 | photo_upload_file_name | 대표 상품 이미지(업로드한 파일명)    | VARCHAR(500) | NOT NULL                                |
 | photo_store_file_name  | 대표 상품 이미지(서버에 저장된 파일명) | VARCHAR(500) | NOT NULL                                |
@@ -28,8 +28,8 @@ CREATE TABLE goods (
        name VARCHAR(100),
        summary VARCHAR(500),
        price BIGINT NOT NULL,
-       sale_price BIGINT,
-       sale_percent INT,
+       discount_price BIGINT,
+       discount_percent INT,
        sale_status VARCHAR(50) NOT NULL,
        photo_upload_file_name VARCHAR(500),
        photo_store_file_name VARCHAR(500),
@@ -74,42 +74,43 @@ CREATE TABLE goods_detail (
 ```
 
 ### Goods_Option
-| 컬럼명             | 설명     | 데이터 타입      | 제약 조건                                   |
-|-----------------|--------|-------------|-----------------------------------------|
-| goods_option_id | 식별자    | BIGINT      | PK                                      |
-| goods_id        | 상품 식별자 | BIGINT      | FK (goods - goods_id)                   |
-| price           | 금액     | BIGINT      | NOT NULL                                |
-| sale_price      | 할인 금액  | BIGINT      |                                         |
-| sale_percent    | 할인 퍼센트 | INT         |                                         |
-| amount          | 재고     | BIGINT      | NOT NULL                                |
-| sale_status     | 판매 상태  | VARCHAR(50) | NOT NULL                                |
-| created_at      | 생성일시   | DATE        | NOT NULL                                |
-| created_by      | 생성자    | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
-| updated_at      | 수정일시   | DATE        | NOT NULL                                |
-| updated_by      | 수정자    | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
-| deleted_at      | 삭제일시   | DATE        |                                         |
-| deleted_by      | 삭제자    | BIGINT      | - (Admin - admin_id)                    |
+| 컬럼명              | 설명     | 데이터 타입       | 제약 조건                                   |
+|------------------|--------|--------------|-----------------------------------------|
+| goods_option_id  | 식별자    | BIGINT       | PK                                      |
+| goods_id         | 상품 식별자 | BIGINT       | FK (goods - goods_id)                   |
+| name             | 옵션 이름  | VARCHAR(100) | 
+| price            | 금액     | BIGINT       | NOT NULL                                |
+| discount_price   | 할인 금액  | BIGINT       |                                         |
+| discount_percent | 할인 퍼센트 | INT          |                                         |
+| amount           | 재고     | BIGINT       | NOT NULL                                |
+| sale_status      | 판매 상태  | VARCHAR(50)  | NOT NULL                                |
+| created_at       | 생성일시   | DATE         | NOT NULL                                |
+| created_by       | 생성자    | BIGINT       | - FK (Admin - admin_id) <br/>- NOT NULL |
+| updated_at       | 수정일시   | DATE         | NOT NULL                                |
+| updated_by       | 수정자    | BIGINT       | - FK (Admin - admin_id) <br/>- NOT NULL |
+| deleted_at       | 삭제일시   | DATE         |                                         |
+| deleted_by       | 삭제자    | BIGINT       | - (Admin - admin_id)                    |
 ```mysql
 CREATE TABLE goods_option (
-    goods_option_id BIGINT AUTO_INCREMENT PRIMARY KEY,
-    goods_id BIGINT,
-    price BIGINT NOT NULL,
-    sale_price BIGINT,
-    sale_percent BIGINT,
-    amount INT NOT NULL,
-    sale_status VARCHAR(50) NOT NULL,
-    created_at TIMESTAMP NOT NULL,
-    created_by BIGINT NOT NULL,
-    updated_at TIMESTAMP NOT NULL,
-    updated_by BIGINT NOT NULL,
-    deleted_at TIMESTAMP,
-    delete_by BIGINT,
-    FOREIGN KEY (goods_id) REFERENCES goods(goods_id),
-    FOREIGN KEY (created_by) REFERENCES admin(admin_id),
-    FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
-    FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
+                              goods_option_id BIGINT AUTO_INCREMENT PRIMARY KEY,
+                              goods_id BIGINT,
+                              name VARCHAR(100),
+                              price BIGINT NOT NULL,
+                              discount_price BIGINT,
+                              discount_percent INT,
+                              amount INT NOT NULL,
+                              sale_status VARCHAR(50) NOT NULL,
+                              created_at TIMESTAMP NOT NULL,
+                              created_by BIGINT NOT NULL,
+                              updated_at TIMESTAMP NOT NULL,
+                              updated_by BIGINT NOT NULL,
+                              deleted_at TIMESTAMP,
+                              deleted_by BIGINT,
+                              FOREIGN KEY (goods_id) REFERENCES goods(goods_id),
+                              FOREIGN KEY (created_by) REFERENCES admin(admin_id),
+                              FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
+                              FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
 );
-
 ```
 
 ## 기능
