--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -118,8 +118,8 @@ CREATE TABLE goods_option (
 
 ## 기능
 ### 어드민 기능
-- [ ] CREATE
-  - [ ] 필수 항목 체크
+- [x] CREATE
+  - [x] 필수 항목 체크
     - 상품명
     - 카테고리
     - 상품 요약 설명
@@ -134,6 +134,7 @@ CREATE TABLE goods_option (
       - 판매 상태
       - 상품 금액
       - 재고
+  - [x] 상품 추가 성공 시 상품 리스트 페이지로 이동한다.
 - [ ] READ
   - [ ] 카테고리 별로 조회가 가능하다.
   - [ ] 판매 상태 별로 조회가 가능하다.
