--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -135,6 +135,7 @@ CREATE TABLE goods_option (
       - 상품 금액
       - 재고
   - [x] 상품 추가 성공 시 상품 리스트 페이지로 이동한다.
+  - [x] 존재하지 않는 카테고리 선택 시 에러 반환
 - [ ] READ
   - [ ] 카테고리 별로 조회가 가능하다.
   - [ ] 판매 상태 별로 조회가 가능하다.
