--- a/docs/계정/관리자.md
+++ b/docs/계정/관리자.md
@@ -2,7 +2,7 @@
 ## Table
 | 컬럼명        | 설명                   | 데이터 타입                       | 제약 조건                   |
 |------------|----------------------|------------------------------|-------------------------|
-| admin_id   | 식별자                  | BIGINT                       | PK                      |
+| id         | 식별자                  | BIGINT                       | PK                      |
 | email      | 로그인 아이디              | VARCHAR(255)                 | - UNIQUE<br/>- NOT NULL |
 | password   | 비밀번호                 | VARCHAR(60)                  | NOT NULL                |
 | name       | 본명                   | VARCHAR(30)                  | NOT NULL                |
@@ -14,7 +14,7 @@
 
 ```mysql
 CREATE TABLE admin (
-        admin_id BIGINT AUTO_INCREMENT PRIMARY KEY,
+        id BIGINT AUTO_INCREMENT PRIMARY KEY,
         email VARCHAR(255) UNIQUE NOT NULL,
         password VARCHAR(60) NOT NULL,
         name VARCHAR(30) NOT NULL,
