--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -1,10 +1,10 @@
 # 상품
 
 ## Table
-### Goods
+### Good
 | 컬럼명                    | 설명                     | 데이터 타입       | 제약 조건                                   |
 |------------------------|------------------------|--------------|-----------------------------------------|
-| goods_id               | 식별자                    | BIGINT       | PK                                      |
+| id                     | 식별자                    | BIGINT       | PK                                      |
 | category_id            | 카테고리 식별자               | BIGINT       | NOT NULL                                |
 | name                   | 상품명                    | VARCHAR(100) |                                         |
 | summary                | 짧은 설명                  | VARCHAR(500) |                                         |
@@ -22,8 +22,8 @@
 | delete_by              | 삭제자                    | BIGINT       | - (Admin - admin_id)                    |
 
 ```mysql
-CREATE TABLE goods (
-        goods_id BIGINT AUTO_INCREMENT PRIMARY KEY,
+CREATE TABLE good (
+        id BIGINT AUTO_INCREMENT PRIMARY KEY,
         category_id BIGINT NOT NULL,
         name VARCHAR(100) NOT NULL,
         summary VARCHAR(500) NOT NULL,
@@ -47,22 +47,22 @@ CREATE TABLE goods (
 );
 ```
 
-### Goods_detail
-| 컬럼명             | 설명      | 데이터 타입       | 제약 조건                                   |
-|-----------------|---------|--------------|-----------------------------------------|
-| goods_detail_id | 식별자     | BIGINT       | PK                                      |
-| goods_id        | 상품 식별자  | BIGINT       | FK (goods - goods_id)                   |
-| origin          | 원산지     | VARCHAR(200) |                                         |
-| packaging_type  | 포장타입    | VARCHAR(100) |                                         |
-| weight_volume   | 중량/용량   | VARCHAR(100) |                                         |
-| allergy_info    | 알레르기 정보 | VARCHAR(500) |                                         |
-| guidelines      | 안내사항    | VARCHAR(500) |                                         |
-| expiry_date     | 소비기한    | VARCHAR(500) |                                         |
-| description     | 상품설명    | LONGTEXT     | NOT NULL                                |
+### Good_detail
+| 컬럼명            | 설명      | 데이터 타입       | 제약 조건         |
+|----------------|---------|--------------|---------------|
+| id             | 식별자     | BIGINT       | PK            |
+| good_id        | 상품 식별자  | BIGINT       | FK (good - id) |
+| origin         | 원산지     | VARCHAR(200) |               |
+| packaging_type | 포장타입    | VARCHAR(100) |               |
+| weight_volume  | 중량/용량   | VARCHAR(100) |               |
+| allergy_info   | 알레르기 정보 | VARCHAR(500) |               |
+| guidelines     | 안내사항    | VARCHAR(500) |               |
+| expiry_date    | 소비기한    | VARCHAR(500) |               |
+| description    | 상품설명    | LONGTEXT     | NOT NULL      |
 ```mysql
-CREATE TABLE goods_detail (
-        goods_detail_id BIGINT AUTO_INCREMENT PRIMARY KEY,
-        goods_id BIGINT NOT NULL,
+CREATE TABLE good_detail (
+        id BIGINT AUTO_INCREMENT PRIMARY KEY,
+        good_id BIGINT NOT NULL,
         origin VARCHAR(200),
         packaging_type VARCHAR(100) NOT NULL,
         weight_volume VARCHAR(100) NOT NULL,
@@ -71,31 +71,31 @@ CREATE TABLE goods_detail (
         expiry_date VARCHAR(500),
         description LONGTEXT NOT NULL,
       
-        FOREIGN KEY (goods_id) REFERENCES goods(goods_id)
+        FOREIGN KEY (good_id) REFERENCES good(id)
 );
 ```
 
-### Goods_Option
-| 컬럼명              | 설명     | 데이터 타입       | 제약 조건                                   |
-|------------------|--------|--------------|-----------------------------------------|
-| goods_option_id  | 식별자    | BIGINT       | PK                                      |
-| goods_id         | 상품 식별자 | BIGINT       | FK (goods - goods_id)                   |
-| name             | 옵션 이름  | VARCHAR(100) | 
-| price            | 금액     | BIGINT       | NOT NULL                                |
-| discount_price   | 할인 금액  | BIGINT       |                                         |
-| discount_percent | 할인 퍼센트 | INT          |                                         |
-| amount           | 재고     | BIGINT       | NOT NULL                                |
-| sale_status      | 판매 상태  | VARCHAR(50)  | NOT NULL                                |
-| created_at       | 생성일시   | DATE         | NOT NULL                                |
-| created_by       | 생성자    | BIGINT       | - FK (Admin - admin_id) <br/>- NOT NULL |
-| updated_at       | 수정일시   | DATE         | NOT NULL                                |
-| updated_by       | 수정자    | BIGINT       | - FK (Admin - admin_id) <br/>- NOT NULL |
-| deleted_at       | 삭제일시   | DATE         |                                         |
-| deleted_by       | 삭제자    | BIGINT       | - (Admin - admin_id)                    |
+### Good_Option
+| 컬럼명             | 설명     | 데이터 타입       | 제약 조건                            |
+|-----------------|--------|--------------|----------------------------------|
+| id              | 식별자    | BIGINT       | PK                               |
+| good_id         | 상품 식별자 | BIGINT       | FK (good - id)                   |
+| name            | 옵션 이름  | VARCHAR(100) | 
+| price           | 금액     | BIGINT       | NOT NULL                         |
+| discount_price  | 할인 금액  | BIGINT       |                                  |
+| discount_percent | 할인 퍼센트 | INT          |                                  |
+| amount          | 재고     | BIGINT       | NOT NULL                         |
+| sale_status     | 판매 상태  | VARCHAR(50)  | NOT NULL                         |
+| created_at      | 생성일시   | DATE         | NOT NULL                         |
+| created_by      | 생성자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
+| updated_at      | 수정일시   | DATE         | NOT NULL                         |
+| updated_by      | 수정자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
+| deleted_at      | 삭제일시   | DATE         |                                  |
+| deleted_by      | 삭제자    | BIGINT       | - (Admin - id)                   |
 ```mysql
-CREATE TABLE goods_option (
-        goods_option_id BIGINT AUTO_INCREMENT PRIMARY KEY,
-        goods_id BIGINT,
+CREATE TABLE good_option (
+        id BIGINT AUTO_INCREMENT PRIMARY KEY,
+        good_id BIGINT,
         name VARCHAR(100) NOT NULL,
         price BIGINT NOT NULL,
         discount_price BIGINT,
@@ -109,10 +109,10 @@ CREATE TABLE goods_option (
         deleted_at TIMESTAMP,
         deleted_by BIGINT,
 
-        FOREIGN KEY (goods_id) REFERENCES goods(goods_id),
-        FOREIGN KEY (created_by) REFERENCES admin(admin_id),
-        FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
-        FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
+        FOREIGN KEY (good_id) REFERENCES goods(id),
+        FOREIGN KEY (created_by) REFERENCES admin(id),
+        FOREIGN KEY (updated_by) REFERENCES admin(id),
+        FOREIGN KEY (deleted_by) REFERENCES admin(id)
 );
 ```
 
