--- a/docs/상품/카테고리.md
+++ b/docs/상품/카테고리.md
@@ -1,21 +1,21 @@
 # 상품 카테고리
 
 ## Table
-| 컬럼명         | 설명          | 데이터 타입      | 제약 조건                                   |
-|-------------|-------------|-------------|-----------------------------------------|
-| category_id | 식별자         | BIGINT      | PK                                      |
-| name        | 카테고리 명      | VARCHAR(40) | - UNIQUE <br/>- NOT NULL                |
-| parent_id   | 상위 카테고리 식별자 | BIGINT      | FK (Category - category_id)             |
-| created_at  | 생성일시        | DATE        | NOT NULL                                |
-| created_by  | 생성자         | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
-| updated_at  | 수정일시        | DATE        | NOT NULL                                |
-| updated_by  | 수정자         | BIGINT      | - FK (Admin - admin_id) <br/>- NOT NULL |
-| deleted_at  | 삭제일시        | DATE        |                                         |
-| delete_by   | 삭제자         | BIGINT      | - (Admin - admin_id)                    |
+| 컬럼명        | 설명          | 데이터 타입      | 제약 조건                             |
+|------------|-------------|-------------|-----------------------------------|
+| id         | 식별자         | BIGINT      | PK                                |
+| name       | 카테고리 명      | VARCHAR(40) | - UNIQUE <br/>- NOT NULL          |
+| parent_id  | 상위 카테고리 식별자 | BIGINT      | FK (Category - id)                |
+| created_at | 생성일시        | DATE        | NOT NULL                          |
+| created_by | 생성자         | BIGINT      | - FK (Admin - id) <br/>- NOT NULL |
+| updated_at | 수정일시        | DATE        | NOT NULL                          |
+| updated_by | 수정자         | BIGINT      | - FK (Admin - id) <br/>- NOT NULL |
+| deleted_at | 삭제일시        | DATE        |                                   |
+| delete_by  | 삭제자         | BIGINT      | - (Admin - id)                    |
 
 ```mysql
 CREATE TABLE category (
-        category_id BIGINT AUTO_INCREMENT PRIMARY KEY,
+        id BIGINT AUTO_INCREMENT PRIMARY KEY,
         name VARCHAR(40) UNIQUE NOT NULL,
         parent_id BIGINT,
         created_at TIMESTAMP NOT NULL,
@@ -25,10 +25,10 @@ CREATE TABLE category (
         deleted_at TIMESTAMP,
         deleted_by BIGINT,
         
-        FOREIGN KEY (parent_id) REFERENCES category(category_id),
-        FOREIGN KEY (created_by) REFERENCES admin(admin_id),
-        FOREIGN KEY (updated_by) REFERENCES admin(admin_id),
-        FOREIGN KEY (deleted_by) REFERENCES admin(admin_id)
+        FOREIGN KEY (parent_id) REFERENCES category(id),
+        FOREIGN KEY (created_by) REFERENCES admin(id),
+        FOREIGN KEY (updated_by) REFERENCES admin(id),
+        FOREIGN KEY (deleted_by) REFERENCES admin(id)
 );
 ```
 
