feat: 상품 찜 구현

--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -109,7 +109,7 @@ CREATE TABLE good_option (
         deleted_at TIMESTAMP,
         deleted_by BIGINT,
 
-        FOREIGN KEY (good_id) REFERENCES goods(id),
+        FOREIGN KEY (good_id) REFERENCES good(id),
         FOREIGN KEY (created_by) REFERENCES admin(id),
         FOREIGN KEY (updated_by) REFERENCES admin(id),
         FOREIGN KEY (deleted_by) REFERENCES admin(id)
