--- a/docs/상품/찜.md
+++ b/docs/상품/찜.md
@@ -8,3 +8,15 @@
 | id        | 식별자    | BIGINT | PK                              |
 | member_id | 회원 식별자 | BIGINT | NOT NULL<br/>- FK (Member - id) |
 | good_id   | 상품 식별자 | BIGINT | NOT NULL<br/>- FK (Good - id)   |
+
+```mysql
+CREATE TABLE pick
+(
+    id        BIGINT AUTO_INCREMENT PRIMARY KEY,
+    member_id BIGINT NOT NULL,
+    good_id   BIGINT NOT NULL,
+
+    FOREIGN KEY (good_id) REFERENCES good (id),
+    FOREIGN KEY (member_id) REFERENCES member (id)
+);
+```
