feat: 찜 설계 추가

--- a/docs/상품/찜.md
+++ b/docs/상품/찜.md
@@ -20,3 +20,7 @@ CREATE TABLE pick
     FOREIGN KEY (member_id) REFERENCES member (id)
 );
 ```
+
+# 기능
+- [ ] 고객이 찜을 누르면 하트가 칠해진다.
+- [ ] 상품 상세 페이지 진입 시 찜 여부가 체크된다.
