docs: 상품 상세에서 찜 기능 설계 추가

--- a/docs/상품/찜.md
+++ b/docs/상품/찜.md
@@ -12,15 +12,18 @@
 ```mysql
 CREATE TABLE pick
 (
-    id        BIGINT AUTO_INCREMENT PRIMARY KEY,
-    member_id BIGINT NOT NULL,
-    good_id   BIGINT NOT NULL,
+  id        BIGINT AUTO_INCREMENT PRIMARY KEY,
+  member_id BIGINT NOT NULL,
+  good_id   BIGINT NOT NULL,
 
-    FOREIGN KEY (good_id) REFERENCES good (id),
-    FOREIGN KEY (member_id) REFERENCES member (id)
+  FOREIGN KEY (good_id) REFERENCES good (id),
+  FOREIGN KEY (member_id) REFERENCES member (id)
 );
 ```
 
 # 기능
-- [ ] 고객이 찜을 누르면 하트가 칠해진다.
 - [ ] 상품 상세 페이지 진입 시 찜 여부가 체크된다.
+  - [ ] 찜한 상품이라면 찜 버튼이 칠해진 하트로 노출된다.
+  - [ ] 찜하지 않았다면 찜 버튼이 칠해지지 않은 하트로 노출된다.
+- [ ] 찜하지 않은 상품 찜 버튼 클릭 시 찜하기 처리가 되고, 칠해진 하트로 노출된다.
+- [ ] 찜한 상품 찜 버튼 클릭 시 찜하기가 삭제되고, 칠하지 않은 하트로 노출된다.
