feat: 찜 리스트 조회 및 삭제 버튼 구현

--- a/docs/상품/찜.md
+++ b/docs/상품/찜.md
@@ -27,3 +27,4 @@ CREATE TABLE pick
   - [ ] 찜하지 않았다면 찜 버튼이 칠해지지 않은 하트로 노출된다.
 - [ ] 찜하지 않은 상품 찜 버튼 클릭 시 찜하기 처리가 되고, 칠해진 하트로 노출된다.
 - [ ] 찜한 상품 찜 버튼 클릭 시 찜하기가 삭제되고, 칠하지 않은 하트로 노출된다.
+- [ ] 한 회원당 찜은 총 100개의 상품까지만 가능하다.
