docs: 장바구니 기능 설계 추가

--- a/docs/상품/장바구니.md
+++ b/docs/상품/장바구니.md
@@ -24,3 +24,8 @@ CREATE TABLE cart
     FOREIGN KEY (option_id) REFERENCES good_option (id)
 );
 ```
+
+### 기능
+- [ ] 상품 상세에서 옵션과 수량 선택 후 장바구니에 저장 가능하다.
+- [ ] 장바구니에 최대 100개 까지 저장할 수 있다.
+- [ ] 장바구니 리스트 진입 시 담긴 상품(판매 가능한)의 수, 상품명, 옵션명, 수량, 가격, 할인가격, 포장 방법, 판매 상태가 노출된다.
