--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -14,11 +14,11 @@
 | sale_status            | 판매 상태                  | VARCHAR(50)  | NOT NULL                          |
 | photo_upload_file_name | 대표 상품 이미지(업로드한 파일명)    | VARCHAR(500) | NOT NULL                          |
 | photo_store_file_name  | 대표 상품 이미지(서버에 저장된 파일명) | VARCHAR(500) | NOT NULL                          |
-| created_at             | 생성일시                   | DATE         | NOT NULL                          |
+| created_at             | 생성일시                   | TIMESTAMP    | NOT NULL                          |
 | created_by             | 생성자                    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
-| updated_at             | 수정일시                   | DATE         | NOT NULL                          |
+| updated_at             | 수정일시                   | TIMESTAMP    | NOT NULL                          |
 | updated_by             | 수정자                    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
-| deleted_at             | 삭제일시                   | DATE         |                                   |
+| deleted_at             | 삭제일시                   | TIMESTAMP    |                                   |
 | delete_by              | 삭제자                    | BIGINT       | - (Admin - admin_id)              |
 
 ```mysql
@@ -48,17 +48,17 @@ CREATE TABLE good (
 ```
 
 ### Good_detail
-| 컬럼명            | 설명      | 데이터 타입       | 제약 조건         |
-|----------------|---------|--------------|---------------|
-| id             | 식별자     | BIGINT       | PK            |
+| 컬럼명            | 설명      | 데이터 타입       | 제약 조건          |
+|----------------|---------|--------------|----------------|
+| id             | 식별자     | BIGINT       | PK             |
 | good_id        | 상품 식별자  | BIGINT       | FK (good - id) |
-| origin         | 원산지     | VARCHAR(200) |               |
-| packaging_type | 포장타입    | VARCHAR(100) |               |
-| weight_volume  | 중량/용량   | VARCHAR(100) |               |
-| allergy_info   | 알레르기 정보 | VARCHAR(500) |               |
-| guidelines     | 안내사항    | VARCHAR(500) |               |
-| expiry_date    | 소비기한    | VARCHAR(500) |               |
-| description    | 상품설명    | LONGTEXT     | NOT NULL      |
+| origin         | 원산지     | VARCHAR(200) |                |
+| packaging_type | 포장타입    | VARCHAR(100) |                |
+| weight_volume  | 중량/용량   | VARCHAR(100) |                |
+| allergy_info   | 알레르기 정보 | VARCHAR(500) |                |
+| guidelines     | 안내사항    | VARCHAR(500) |                |
+| expiry_date    | 소비기한    | VARCHAR(500) |                |
+| description    | 상품설명    | LONGTEXT     | NOT NULL       |
 ```mysql
 CREATE TABLE good_detail (
         id BIGINT AUTO_INCREMENT PRIMARY KEY,
@@ -76,22 +76,22 @@ CREATE TABLE good_detail (
 ```
 
 ### Good_Option
-| 컬럼명             | 설명     | 데이터 타입       | 제약 조건                            |
-|-----------------|--------|--------------|----------------------------------|
-| id              | 식별자    | BIGINT       | PK                               |
-| good_id         | 상품 식별자 | BIGINT       | FK (good - id)                   |
-| name            | 옵션 이름  | VARCHAR(100) | 
-| price           | 금액     | BIGINT       | NOT NULL                         |
-| discount_price  | 할인 금액  | BIGINT       |                                  |
-| discount_percent | 할인 퍼센트 | INT          |                                  |
-| amount          | 재고     | BIGINT       | NOT NULL                         |
-| sale_status     | 판매 상태  | VARCHAR(50)  | NOT NULL                         |
-| created_at      | 생성일시   | DATE         | NOT NULL                         |
-| created_by      | 생성자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
-| updated_at      | 수정일시   | DATE         | NOT NULL                         |
-| updated_by      | 수정자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
-| deleted_at      | 삭제일시   | DATE         |                                  |
-| deleted_by      | 삭제자    | BIGINT       | - (Admin - id)                   |
+| 컬럼명              | 설명     | 데이터 타입       | 제약 조건                             |
+|------------------|--------|--------------|-----------------------------------|
+| id               | 식별자    | BIGINT       | PK                                |
+| good_id          | 상품 식별자 | BIGINT       | FK (good - id)                    |
+| name             | 옵션 이름  | VARCHAR(100) | 
+| price            | 금액     | BIGINT       | NOT NULL                          |
+| discount_price   | 할인 금액  | BIGINT       |                                   |
+| discount_percent | 할인 퍼센트 | INT          |                                   |
+| amount           | 재고     | BIGINT       | NOT NULL                          |
+| sale_status      | 판매 상태  | VARCHAR(50)  | NOT NULL                          |
+| created_at       | 생성일시   | TIMESTAMP    | NOT NULL                          |
+| created_by       | 생성자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
+| updated_at       | 수정일시   | TIMESTAMP    | NOT NULL                          |
+| updated_by       | 수정자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
+| deleted_at       | 삭제일시   | TIMESTAMP    |                                   |
+| deleted_by       | 삭제자    | BIGINT       | - (Admin - id)                    |
 ```mysql
 CREATE TABLE good_option (
         id BIGINT AUTO_INCREMENT PRIMARY KEY,
