docs: 캐시 충전 테이블명 변경
cash_request - > cash_charging

--- a/docs/주문/적립금.md
+++ b/docs/주문/적립금.md
@@ -12,7 +12,7 @@
 | request_at | 요청 시간   | TIMESTAMP    | NOT NULL         |
 
 ```mysql
-CREATE TABLE cash_request
+CREATE TABLE cash_charging
 (
     id         BIGINT AUTO_INCREMENT PRIMARY KEY,
     member_id  BIGINT       NOT NULL,
