docs: 캐시 테이블 admin not null 조건 삭제

--- a/docs/주문/캐시.md
+++ b/docs/주문/캐시.md
@@ -17,7 +17,7 @@ CREATE TABLE cash_charging
     id         BIGINT AUTO_INCREMENT PRIMARY KEY,
     member_id  BIGINT       NOT NULL,
     amount     BIGINT       NOT NULL,
-    admin_id   BIGINT       NOT NULL,
+    admin_id   BIGINT,
     status     VARCHAR(255) NOT NULL,
     request_at TIMESTAMP    NOT NULL,
 
