docs: 캐시 요청 테이블에 응답 시각 컬럼 추가

--- a/docs/주문/캐시.md
+++ b/docs/주문/캐시.md
@@ -2,14 +2,15 @@
 
 ## Table
 
-| 컬럼명        | 설명      | 데이터 타입       | 제약 조건            |
-|------------|---------|--------------|------------------|
-| id         | 식별자     | BIGINT       | PK               |
-| member_id  | 회원 식별자  | BIGINT       | FK (member - id) |
-| amount     | 요청 금액   | BIGINT       | NOT NULL         |
-| admin_id   | 관리자 식별자 | BIGINT       | FK (admin - id)  |
-| status     | 승낙 여부   | VARCHAR(255) | NOT NULL         |
-| request_at | 요청 시간   | TIMESTAMP    | NOT NULL         |
+| 컬럼명         | 설명        | 데이터 타입       | 제약 조건            |
+|-------------|-----------|--------------|------------------|
+| id          | 식별자       | BIGINT       | PK               |
+| member_id   | 회원 식별자    | BIGINT       | FK (member - id) |
+| amount      | 요청 금액     | BIGINT       | NOT NULL         |
+| admin_id    | 관리자 식별자   | BIGINT       | FK (admin - id)  |
+| status      | 승낙 여부     | VARCHAR(255) | NOT NULL         |
+| request_at  | 요청 시간     | TIMESTAMP    | NOT NULL         |
+| response_at | 마지막 응답 시간 | TIMESTAMP    | NOT NULL         |
 
 ```mysql
 CREATE TABLE cash_charging
@@ -20,6 +21,7 @@ CREATE TABLE cash_charging
     admin_id   BIGINT,
     status     VARCHAR(255) NOT NULL,
     request_at TIMESTAMP    NOT NULL,
+    response_at TIMESTAMP,
 
     FOREIGN KEY (member_id) REFERENCES member (id),
     FOREIGN KEY (admin_id) REFERENCES admin (id)
