feat: count, amount 등을 quantity로 통일

--- a/docs/상품/상품.md
+++ b/docs/상품/상품.md
@@ -84,7 +84,7 @@ CREATE TABLE good_detail (
 | price            | 금액     | BIGINT       | NOT NULL                          |
 | discount_price   | 할인 금액  | BIGINT       |                                   |
 | discount_percent | 할인 퍼센트 | INT          |                                   |
-| amount           | 재고     | BIGINT       | NOT NULL                          |
+| quantity         | 재고     | BIGINT       | NOT NULL                          |
 | sale_status      | 판매 상태  | VARCHAR(50)  | NOT NULL                          |
 | created_at       | 생성일시   | TIMESTAMP    | NOT NULL                          |
 | created_by       | 생성자    | BIGINT       | - FK (Admin - id) <br/>- NOT NULL |
@@ -100,7 +100,7 @@ CREATE TABLE good_option (
         price BIGINT NOT NULL,
         discount_price BIGINT,
         discount_percent INT,
-        amount INT NOT NULL,
+        quantity INT NOT NULL,
         sale_status VARCHAR(50) NOT NULL,
         created_at TIMESTAMP NOT NULL,
         created_by BIGINT NOT NULL,
