--- a/docs/상품/장바구니.md
+++ b/docs/상품/장바구니.md
@@ -8,7 +8,7 @@
 | id          | 식별자       | BIGINT  | PK                                   |
 | member_id   | 회원 식별자    | BIGINT  | NOT NULL<br/>- FK (Member - id)      |
 | option_id   | 상품 옵션 식별자 | BIGINT  | NOT NULL<br/>- FK (Good_Option - id) |
-| count       | 수량        | BIGINT  | NOT NULL<br/>Default 1               |
+| quantity    | 수량        | BIGINT  | NOT NULL<br/>Default 1               |
 | cart_status | 선택 상태     | BOOLEAN | NOT NULL<br/>Default True            |
 
 ```mysql
@@ -17,7 +17,7 @@ CREATE TABLE cart
     id          BIGINT AUTO_INCREMENT PRIMARY KEY,
     member_id   BIGINT  NOT NULL,
     option_id   BIGINT  NOT NULL,
-    count       BIGINT  NOT NULL DEFAULT 1,
+    quantity       BIGINT  NOT NULL DEFAULT 1,
     status      BOOLEAN NOT NULL DEFAULT TRUE,
 
     FOREIGN KEY (member_id) REFERENCES member (id),
