--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -1,19 +1,31 @@
 ## Table
 ### Orders
-| 컬럼명               | 설명         | 데이터 타입       | 제약 조건            |
-|-------------------|------------|--------------|------------------|
-| id                | 식별자        | BIGINT       | PK               |
-| member_id         | 구매자        | BIGINT       | FK (member - id) |
-| created_at        | 결제 일시      | TIMESTAMP    | NOT NULL         |
-| delivery_status   | 배송 상태      | VARCHAR(255) | NOT NULL         |
+| 컬럼명                   | 설명           | 데이터 타입       | 제약 조건            |
+|-----------------------|--------------|--------------|------------------|
+| id                    | 식별자          | BIGINT       | PK               |
+| member_id             | 구매자          | BIGINT       | FK (member - id) |
+| delivery_status       | 배송 상태        | VARCHAR(255) | NOT NULL         |
+| total_price           | 결제 금액        | BIGINT       | NOT NULL         |
+| total_discount_price  | 할인된 금액       | BIGINT       |                  |
+| delivery_price        | 배송비          | INT          | NOT NULL         |
+| coupon_discount_price | 쿠폰으로 할인한 금액  | BIGINT       | NOT NULL         |
+| point                 | 적립금으로 결제한 금액 | BIGINT       | NOT NULL         |
+| cash                  | 캐시로 결제한 금액   | BIGINT       | NOT NULL         |
+| created_at            | 결제 일시        | TIMESTAMP    | NOT NULL         |
 
 ```mysql
 CREATE TABLE orders
 (
-    id              BIGINT AUTO_INCREMENT PRIMARY KEY,
-    member_id       BIGINT       NOT NULL,
-    created_at      TIMESTAMP    NOT NULL,
-    delivery_status VARCHAR(255) NOT NULL,
+    id                    BIGINT AUTO_INCREMENT PRIMARY KEY,
+    member_id             BIGINT       NOT NULL,
+    delivery_status       VARCHAR(255) NOT NULL,
+    total_price           BIGINT       NOT NULL,
+    total_discount_price        BIGINT,
+    delivery_price        BIGINT,
+    coupon_discount_price BIGINT,
+    point                 BIGINT,
+    cash                  BIGINT       NOT NULL,
+    created_at            TIMESTAMP    NOT NULL,
 
     FOREIGN KEY (member_id) REFERENCES member (id)
 );
@@ -44,31 +56,6 @@ CREATE TABLE order_address
     FOREIGN KEY (order_id) REFERENCES orders (id)
 );
 ```
-### order_pay
-| 컬럼명            | 설명           | 데이터 타입 | 제약 조건            |
-|----------------|--------------|--------|------------------|
-| id             | 식별자          | BIGINT | PK               |
-| order_id       | 주문 식별자       | BIGINT | FK (orders - id) |
-| total_price    | 결제 금액        | BIGINT | NOT NULL         |
-| discount_price | 할인된 금액       | BIGINT |                  |
-| delivery_price | 배송비          | INT    | NOT NULL         |
-| coupon_price   | 쿠폰으로 할인한 금액  | BIGINT | NOT NULL         |
-| point          | 적립금으로 결제한 금액 | BIGINT | NOT NULL         |
-
-```mysql
-CREATE TABLE order_pay
-(
-    id             BIGINT AUTO_INCREMENT PRIMARY KEY,
-    order_id       BIGINT NOT NULL,
-    total_price    BIGINT NOT NULL,
-    discount_price BIGINT,
-    delivery_price INT    NOT NULL,
-    coupon_price   BIGINT NOT NULL,
-    point          BIGINT NOT NULL,
-
-    FOREIGN KEY (order_id) REFERENCES orders (id)
-);
-```
 
 ### order_good
 | 컬럼명            | 설명            | 데이터 타입 | 제약 조건                 |
@@ -79,7 +66,7 @@ CREATE TABLE order_pay
 | option_id      | 옵션 식별자        | BIGINT | FK (good_option - id) |
 | price          | 결제 당시의 상품 금액  | BIGINT | NOT NULL              |
 | discount_price | 결제 당시의 할인된 금액 | BIGINT |                       |
-| count          | 구매 수량         | INT    | NOT NULL              |
+| quantity       | 구매 수량         | INT    | NOT NULL              |
 
 ```mysql
 CREATE TABLE order_good
@@ -90,7 +77,7 @@ CREATE TABLE order_good
     option_id      BIGINT NOT NULL,
     price          BIGINT NOT NULL,
     discount_price BIGINT,
-    count          INT    NOT NULL,
+    quantity          INT    NOT NULL,
 
     FOREIGN KEY (order_id) REFERENCES orders (id),
     FOREIGN KEY (good_id) REFERENCES good (id),
