--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -40,7 +40,7 @@ CREATE TABLE orders
 | phone    | 수령인 전화번호 | VARCHAR(20)  | NOT NULL         |
 | road     | 주소       | VARCHAR(255) | NOT NULL         |
 | detail   | 상세주소     | VARCHAR(255) |                  |
-| zipcode  | 우편번호     | VARCHAR(10)  | NOT NULL         |
+| zipcode  | 우편번호     | INT          | NOT NULL         |
 
 ```mysql
 CREATE TABLE order_address
@@ -51,10 +51,11 @@ CREATE TABLE order_address
     phone    VARCHAR(20)  NOT NULL,
     road     VARCHAR(255) NOT NULL,
     detail   VARCHAR(255),
-    zipcode  VARCHAR(10)  NOT NULL,
+    zipcode  INT          NOT NULL,
 
     FOREIGN KEY (order_id) REFERENCES orders (id)
 );
+
 ```
 
 ### order_good
