docs: 캐시 기능 개발 상황 반영

--- a/docs/주문/캐시.md
+++ b/docs/주문/캐시.md
@@ -29,8 +29,8 @@ CREATE TABLE cash_charging
 ```
 ### 기능
 - [ ] 캐시 충전 페이지 진입 시 잔여 캐시가 출력된다. (API 조회)
-- [ ] 한 번에 충전은 최대 1,000,000원 까지 가능하다.
-- [ ] 사용자는 충전 요청을 취소할 수 있다.
-- [ ] 관리자가 수락/거절/보류 등으로 처리할 수 있다.
-- [ ] 취소 상태의 요청은 관리자가 설정할 수 없다.
-- [ ] 관리자가 수락이 충전된다.
+- [x] 한 번에 충전은 최대 1,000,000원 까지 가능하다.
+- [x] 사용자는 충전 요청을 취소할 수 있다.
+- [x] 관리자가 수락/거절/보류 등으로 처리할 수 있다.
+- [x] 취소 상태의 요청은 관리자가 설정할 수 없다.
+- [x] 관리자가 수락이 충전된다.
