docs:  주문 상세 페이지 기능 설계 추가

--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -96,3 +96,23 @@ CREATE TABLE order_good
   - [x] 주문 번호
   - [x] 실 결제 금액 (적립금 제외)
   - [x] 주문 상태 (배송상태)
+
+#### 주문 상세 조회
+- [ ] 배송 상태가 출력된다.
+  - [ ] 상태 마지막 변경 일시가 출력된다.
+- [ ] 아래의 정보가 출력된다.
+  - [ ] 주문번호
+  - [ ] 상품 리스트
+    - [ ] 상품 사진
+    - [ ] 상품명
+    - [ ] 구매 당시의 할인 전 금액
+    - [ ] 구매 당시의 할인 후 금액
+    - [ ] 수량
+    - [ ] 후기 작성 여부로 [후기 작성] 버튼 혹은 [작성한 후기] 버튼 출력
+- [ ] [전체 상품 다시 담기] 버튼
+- [ ] 배송 조회 버튼
+- [ ] 결제 정보
+- [ ] 주문 정보
+- [ ] 배송 정보
+- [ ] 추가 정보
+- [ ] 배송 준비 중 상태일 경우 [전체 상품 주문 취소] 버튼
