docs: 주문 관리자 기능 설계 추가

--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -116,3 +116,15 @@ CREATE TABLE order_good
 - [ ] 배송 정보
 - [ ] 추가 정보
 - [ ] 배송 준비 중 상태일 경우 [전체 상품 주문 취소] 버튼
+
+
+### 관리자 기능
+#### 주문 리스트 조회
+- [ ] 상태 별로 조회가 가능하다.
+- [ ] 첫 진입 시 배송 준비 중인 내역만 출력된다.
+- [ ] 주문 묶음으로 출력된다.
+  - [ ] 주문자 
+  - [ ] 주문 날짜 및 시각, 상품명 (예: 대표 상품 외 n건)
+  - [ ] 주문 번호
+  - [ ] 실 결제 금액 (적립금 제외)
+  - [ ] 주문 상태 (배송상태)
