--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -86,6 +86,30 @@ CREATE TABLE order_good
 );
 ```
 
+### order_delivery
+| 컬럼명              | 설명      | 데이터 타입       | 제약 조건            |
+|------------------|---------|--------------|------------------|
+| id               | 식별자     | BIGINT       | PK               |
+| order_id         | 주문 식별자  | BIGINT       | FK (orders - id) |
+| current_location | 위치      | VARCHAR(255) | NOT NULL         |
+| admin_id         | 관리자 식별자 | BIGINT       | FK (admin - id)  |
+| created_at       | 결제 일시   | TIMESTAMP    | NOT NULL         |
+
+```mysql
+CREATE TABLE order_delivery
+(
+    id               BIGINT AUTO_INCREMENT PRIMARY KEY,
+    order_id         BIGINT       NOT NULL,
+    current_location VARCHAR(255) NOT NULL,
+    admin_id         BIGINT       NOT NULL,
+
+    created_at       TIMESTAMP    NOT NULL,
+
+    FOREIGN KEY (order_id) REFERENCES orders (id),
+    FOREIGN KEY (admin_id) REFERENCES admin (id)
+);
+```
+
 ### 사용자 기능
 #### 주문 리스트 조회
 - [x] 최대 지난 3년간의 주문내역까지 확인할 수 있다.
