fix: 주문 내역에 주문 일시 추가

--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -144,11 +144,10 @@ CREATE TABLE order_delivery
 
 ### 관리자 기능
 #### 주문 리스트 조회
-- [ ] 상태 별로 조회가 가능하다.
-- [ ] 첫 진입 시 배송 준비 중인 내역만 출력된다.
-- [ ] 주문 묶음으로 출력된다.
-  - [ ] 주문자 
-  - [ ] 주문 날짜 및 시각, 상품명 (예: 대표 상품 외 n건)
-  - [ ] 주문 번호
-  - [ ] 실 결제 금액 (적립금 제외)
-  - [ ] 주문 상태 (배송상태)
+- [x] 상태 별로 조회가 가능하다.
+- [x] 주문 묶음으로 출력된다.
+  - [x] 주문자 
+  - [x] 주문 날짜 및 시각
+  - [x] 주문 번호
+  - [x] 실 결제 금액 (적립금 제외)
+  - [x] 주문 상태 (배송상태)
