docs: 배송 상태 변경 개발된 기능 체크

--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -151,3 +151,11 @@ CREATE TABLE order_delivery
   - [x] 주문 번호
   - [x] 실 결제 금액 (적립금 제외)
   - [x] 주문 상태 (배송상태)
+
+#### 주문 리스트에서 배송 상태 변경하기
+- [x] 위치 변경
+- [x] 배송 상태 변경
+  - 배송 중
+  - 배송 완료
+  - 반품 처리중
+  - 반품 완료
