docs: 현재 개발 진행 상황 추가

--- a/docs/주문/주문.md
+++ b/docs/주문/주문.md
@@ -92,6 +92,7 @@ CREATE TABLE order_good
 | id               | 식별자     | BIGINT       | PK               |
 | order_id         | 주문 식별자  | BIGINT       | FK (orders - id) |
 | current_location | 위치      | VARCHAR(255) | NOT NULL         |
+| delivery_status  | 배송 상태   | VARCHAR(255) | NOT NULL         |
 | admin_id         | 관리자 식별자 | BIGINT       | FK (admin - id)  |
 | created_at       | 결제 일시   | TIMESTAMP    | NOT NULL         |
 
@@ -102,7 +103,7 @@ CREATE TABLE order_delivery
     order_id         BIGINT       NOT NULL,
     current_location VARCHAR(255) NOT NULL,
     admin_id         BIGINT       NOT NULL,
-
+    delivery_status  VARCHAR(255) NOT NULL,
     created_at       TIMESTAMP    NOT NULL,
 
     FOREIGN KEY (order_id) REFERENCES orders (id),
@@ -122,24 +123,23 @@ CREATE TABLE order_delivery
   - [x] 주문 상태 (배송상태)
 
 #### 주문 상세 조회
-- [ ] 배송 상태가 출력된다.
-  - [ ] 상태 마지막 변경 일시가 출력된다.
-- [ ] 아래의 정보가 출력된다.
-  - [ ] 주문번호
-  - [ ] 상품 리스트
-    - [ ] 상품 사진
-    - [ ] 상품명
-    - [ ] 구매 당시의 할인 전 금액
-    - [ ] 구매 당시의 할인 후 금액
-    - [ ] 수량
-    - [ ] 후기 작성 여부로 [후기 작성] 버튼 혹은 [작성한 후기] 버튼 출력
+- [x] 배송 상태가 출력된다.
+- [x] 아래의 정보가 출력된다.
+  - [x] 주문번호
+  - [x] 상품 리스트
+    - [x] 상품 사진
+    - [x] 상품명
+    - [x] 구매 당시의 할인 전 금액
+    - [x] 구매 당시의 할인 후 금액
+    - [x] 수량
+    - [x] 후기 작성 여부로 [후기 작성] 버튼 혹은 [작성한 후기] 버튼 출력
 - [ ] [전체 상품 다시 담기] 버튼
-- [ ] 배송 조회 버튼
-- [ ] 결제 정보
-- [ ] 주문 정보
-- [ ] 배송 정보
-- [ ] 추가 정보
-- [ ] 배송 준비 중 상태일 경우 [전체 상품 주문 취소] 버튼
+- [x] 상품 정보
+- [x] 주문 정보
+- [x] 결제 정보
+- [x] 배송 정보
+- [x] 배송 내역
+- [x] 배송 준비 중 상태일 경우 [전체 상품 주문 취소] 버튼
 
 
 ### 관리자 기능
