docs: 후기 테이블 및 설계 수정

--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -95,6 +95,7 @@ CREATE TABLE review_like (
 
 ### 기능
 #### 사용자
+- [ ] 비공개로 설정할 수 있다. -> 테이블 수정 필요
 - [x] 후기 작성 시 캐시 + 적립금으로 구매한 금액에 비례하여 포인트가 적립된다.
   - [x] 사진 첨부 시 2%
   - [x] 사진 미 첨부 시 1%
@@ -105,6 +106,13 @@ CREATE TABLE review_like (
 - [x] 사진은 최대 8장 까지 업로드할 수 있다.
 - [ ] 상품과 무관하거나 반복되는 단어/문장을 사용하여 후기로 볼 수 없는 글의 경우 통보없이 삭제되며 적립금을 회수한다.
 - [x] 후기는 최소 10자에서 1000자 까지 입력 가능하다.
+- [ ] 작성 가능 후기 탭
+  - [ ] 한 달 이내에 구매 & 후기 작성하지 않은 옵션 리스트 출력
+  - [ ] 옵션에 [후기작성] 버튼 노출
+- [ ] 작성한 후기 탭
+  - [ ] 작성한 후기 리스트가 노출된다. (페이징 처리)
+  - [ ] 후기 본문은 3줄까지 출력되며 말줄임 처리가 된다.
+  - [ ] 옵션에 [후기수정] 버튼 노출
 
 #### 관리자
 - [ ] 삭제할 경우 삭제 사유를 작성해야 한다.
