--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -9,6 +9,7 @@
 | rating        | 별점             | DECIMAL(2, 2) | CHECK (MOD(rating * 10, 5) = 0 AND rating >= 0.0 AND rating <= 5.0) |
 | content       | 후기 내용          | VARCHAR(4000) | CHECK(CHAR_LENGTH 10 ~ 1000)                                        |
 | point         | 적립된 포인트        | INT           | NOT NULL                                                            |
+| secret        | 비공개 여부         | BOOLEAN       | NOT NULL                                                            |
 | is_best       | 베스트 여부         | BOOLEAN       | NOT NULL                                                            |
 | created_by    | 생성자            | BIGINT        | - FK (member - id) <br/>- NOT NULL                                  |
 | created_at    | 생성일시           | TIMESTAMP     | NOT NULL                                                            |
@@ -24,6 +25,7 @@ CREATE TABLE review
     rating DECIMAL(2, 1),
     content VARCHAR(4000),
     point INT NOT NULL,
+    secret BOOLEAN NOT NULL,
     is_best BOOLEAN NOT NULL,
     created_by BIGINT NOT NULL,
     created_at TIMESTAMP NOT NULL,
@@ -113,6 +115,14 @@ CREATE TABLE review_like (
   - [ ] 작성한 후기 리스트가 노출된다. (페이징 처리)
   - [ ] 후기 본문은 3줄까지 출력되며 말줄임 처리가 된다.
   - [ ] 옵션에 [후기수정] 버튼 노출
+- [ ] 후기 작성 모달에 하기 내용이 출력된다.
+  - [ ] 상품 이미지
+  - [ ] 상품명
+  - [ ] 옵션명
+  - [ ] 내용 입력란
+  - [ ] 사진 첨부
+  - [ ] 별점 영역
+  - [ ] 비공개
 
 #### 관리자
 - [ ] 삭제할 경우 삭제 사유를 작성해야 한다.
