--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -51,7 +51,7 @@ CREATE TABLE review
 
 ```mysql
 CREATE TABLE review_delete (
-    id BIGINT PRIMARY KEY,
+    id BIGINT PRIMARY KEY AUTO_INCREMENT,
     delete_by BIGINT NOT NULL,
     review_id BIGINT NOT NULL,
     memo VARCHAR(4000),
@@ -70,7 +70,7 @@ CREATE TABLE review_delete (
 
 ```mysql
 CREATE TABLE review_photo (
-    id BIGINT PRIMARY KEY,
+    id BIGINT PRIMARY KEY AUTO_INCREMENT,
     review_id BIGINT NOT NULL,
     photo VARCHAR(500) NOT NULL,
   
@@ -86,7 +86,7 @@ CREATE TABLE review_photo (
 
 ```mysql
 CREATE TABLE review_like (
-    id BIGINT PRIMARY KEY,
+    id BIGINT PRIMARY KEY AUTO_INCREMENT,
     member_id BIGINT NOT NULL,
     review_id BIGINT NOT NULL,
   
@@ -115,7 +115,7 @@ CREATE TABLE review_like (
   - [ ] 작성한 후기 리스트가 노출된다. (페이징 처리)
   - [ ] 후기 본문은 3줄까지 출력되며 말줄임 처리가 된다.
   - [ ] 옵션에 [후기수정] 버튼 노출
-- [ ] 후기 작성 모달에 하기 내용이 출력된다.
+- [ ] 후기 작성/수정 모달에 하기 내용이 출력된다.
   - [ ] 상품 이미지
   - [ ] 상품명
   - [ ] 옵션명
