docs: 후기 설계 추가

--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -123,6 +123,9 @@ CREATE TABLE review_like (
   - [ ] 사진 첨부
   - [ ] 별점 영역
   - [ ] 비공개
+- [ ] 상품 상세 페이지
+    - [ ] 해당 상품에 등록된 후기 중, 공개 상태인 후기의 수량이 출력된다.
+    - [ ] best로 선정된 후기가 먼저 출력되고, 그 외의 후기가 추천순으로 출력된다.
 
 #### 관리자
 - [ ] 삭제할 경우 삭제 사유를 작성해야 한다.
