docs: 후기 설계 추가

--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -97,6 +97,7 @@ CREATE TABLE review_like (
 
 ### 기능
 #### 사용자
+##### 후기 작성
 - [ ] 비공개로 설정할 수 있다. -> 테이블 수정 필요
 - [x] 후기 작성 시 캐시 + 적립금으로 구매한 금액에 비례하여 포인트가 적립된다.
   - [x] 사진 첨부 시 2%
@@ -123,9 +124,13 @@ CREATE TABLE review_like (
   - [ ] 사진 첨부
   - [ ] 별점 영역
   - [ ] 비공개
-- [ ] 상품 상세 페이지
-    - [ ] 해당 상품에 등록된 후기 중, 공개 상태인 후기의 수량이 출력된다.
-    - [ ] best로 선정된 후기가 먼저 출력되고, 그 외의 후기가 추천순으로 출력된다.
+##### 상품 상세 페이지
+- [ ] 해당 상품에 등록된 후기 중, 공개 상태인 후기의 수량이 출력된다.
+- [ ] best로 선정된 후기가 먼저 출력되고, 그 외의 후기가 필터 설정한 순서대로 출력된다.
+  - [ ] 최신순/추천순
+- [ ] 관리자에 의해 삭제되었거나, 비공개 상태인 후기는 출력되지 않는다.
+- [ ] 후기 이미지가 등록된 후기인 경우 후기 본문과 이미지가 함께 출력된다.
+- [ ] 후기에 좋아요를 클릭할 수 있다.
 
 #### 관리자
 - [ ] 삭제할 경우 삭제 사유를 작성해야 한다.
