--- a/docs/상품/최근 본 상품.md
+++ b/docs/상품/최근 본 상품.md
@@ -1,2 +1,4 @@
 - [ ] 상품 상세 페이지 진입 시에 쿠키에 해당 상품의 ID가 저장된다.
 - [ ] 최근 본 상품 페이지 진입 시 쿠키에 저장된 정보로 상품 리스트가 출력된다.
+- [ ] 최근 본 상품은 삭제할 수 있다.
+- [ ] 삭제 시 쿠키의 정보가 삭제된다.
