docs: 설계 상세하게 정리

--- a/docs/상품/최근 본 상품.md
+++ b/docs/상품/최근 본 상품.md
@@ -1,4 +1,6 @@
-- [ ] 상품 상세 페이지 진입 시에 쿠키에 해당 상품의 ID가 저장된다.
-- [ ] 최근 본 상품 페이지 진입 시 쿠키에 저장된 정보로 상품 리스트가 출력된다.
-- [ ] 최근 본 상품은 삭제할 수 있다.
-- [ ] 삭제 시 쿠키의 정보가 삭제된다.
+- [ ] 상품 상세 진입 시 상품의 ID와 날짜(시각)를 쿠키에 저장한다.
+    - [ ] 오늘 저장했었다면 이전 값의 시각을 현재로 변경한다.
+    - [ ] 다른 날짜에 저장했었다면 추가로 저장한다. (아직 확정 X)
+- [ ] 최근 본 상품 페이지
+    - [ ] 상품 리스트와 날짜 정보가 출력된다.
+    - [ ] 상품 정보를 삭제할 수 있다.
