--- a/docs/상품/최근 본 상품.md
+++ b/docs/상품/최근 본 상품.md
@@ -1,4 +1,5 @@
-- [ ] 상품 상세 진입 시 상품의 ID와 날짜(시각)를 쿠키에 저장한다.
+- [ ] 상품 상세
+    - [ ] 진입 시 상품의 ID와 날짜(시각)를 쿠키에 저장한다.
     - [ ] 오늘 저장했었다면 이전 값의 시각을 현재로 변경한다.
     - [ ] 다른 날짜에 저장했었다면 추가로 저장한다. (아직 확정 X)
 - [ ] 최근 본 상품 페이지
