docs: 후기 관리자 기능 추가

--- a/docs/주문/후기.md
+++ b/docs/주문/후기.md
@@ -136,3 +136,9 @@ CREATE TABLE review_like (
 #### 관리자
 - [ ] 삭제할 경우 삭제 사유를 작성해야 한다.
 - [ ] 삭제 사유는 최소 10자에서 1000자 까지 입력 가능하다.
+- [ ] 모든 후기를 조회할 수 있다.
+- [ ] 후기는 사진과 함께 노출된다.
+- [ ] 후기 리스트는 상품별로 조회할 수 있다.
+- [ ] 후기 리스트는 최신순으로 조회할 수 있다.
+- [ ] 베스트를 선정할 수 있다.
+- [ ] 베스트 선정 시 포인트가 추가로 적립된다.
